More opinionated defaults

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "jeps": "bin/jeps"
+  },
   "type": "module",
   "scripts": {
     "prettier": "prettier --write .",
